syntax = "proto3";

package rivet.backend.pkg.mm.lobby_list_for_namespace;

import "proto/common.proto";

message Request {
	repeated rivet.common.Uuid namespace_ids = 1;
}

message Response {
	message Namespace {
		rivet.common.Uuid namespace_id = 1;
		repeated rivet.common.Uuid lobby_ids = 2;
	}

	repeated Namespace namespaces = 1;
}
